[package]
name = "chunk_iter"
version = "0.1.3"
edition = "2018"
license = "MIT OR Unlicense"
readme = "README.md"
description = "Chunked iterator generic over any iterator."
repository = "https://github.com/frogtd/chunk_iter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
testdrop = "0.1.2"